Add traefik service config

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -3,3 +3,7 @@ collections:
   - name: https://github.com/ahaydon/ansible-podman-collection.git
     type: git
     version: master
+
+  - name: https://github.com/ahaydon/ansible-traefik-collection.git
+    type: git
+    version: master
