--- a/main.yml
+++ b/main.yml
@@ -13,3 +13,8 @@
     - role: homeassistant_podman
       homeassistant_podman_user: "{{ homeassistant_user }}"
       homeassistant_podman_home: "{{ podman_user_home }}"
+
+    - role: ahaydon.traefik.traefik_http_service
+      traefik_http_service_name: homeassistant
+      traefik_http_service_url: http://{{ ansible_host }}:8123/
+      traefik_http_service_fqdn: hass.local
