--- a/galaxy.yml
+++ b/galaxy.yml
@@ -13,6 +13,7 @@ tags:
   - linux
 dependencies:
   "git+https://github.com/ahaydon/ansible-podman-collection.git": "master"
+  "git+https://github.com/ahaydon/ansible-traefik-collection.git": "master"
 repository: https://github.com/ahaydon/ansible-homeassistant-collection
 documentation: https://github.com/ahaydon/ansible-homeassistant-collection
 homepage: https://github.com/ahaydon/ansible-homeassistant-collection
